Fix issue with g-tabbar overflow

--- a/src/main/webapp/components/Fieldset.less
+++ b/src/main/webapp/components/Fieldset.less
@@ -199,6 +199,7 @@ fieldset
 				display: flex;
 				text-indent: 0;
 				flex-shrink: 0;
+				min-width: 32px;
 				flex-basis: 32px;
 				align-items: stretch;
 				justify-content: center;
