--- a/src/main/webapp/components/Layout.less
+++ b/src/main/webapp/components/Layout.less
@@ -57,9 +57,11 @@ body {
 			grid-row: 2;
 			border: none;
 			padding: 8px;
-			display: flex;
+			display: grid;
 			align-items: center;
-			justify-content: center;
+			justify-items: stretch;
+			grid-template-rows: 1fr;
+			grid-template-columns: 1fr;
 			background-color: var(--nav-background-color);
 			background-image: var(--nav-background-image);
 		}
